--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <title></title>
     <meta charset="utf-8" />
     <style media="screen" type="text/css">
-
         body {
             background-color: black;
             color: white;
         }
 
         canvas {
-            background-color:white;
-            width: 900px;
+            background-color: white;
+            width: 400px;
             height: 400px;
             border: 10px solid green;
             margin: 25px;
@@ -23,11 +22,13 @@
 <body>
     <h1>Medical Imaging</h1>
     <label>Choose Image to edit:</label><br />
-    <input type="file" id="imageLoader" name="imageLoader" />
-    <button onclick="contrast()">Contrast Image</button>
-    <canvas id="imageCanvas">
-    </canvas>
- 
+    <canvas id="imageCanvas"></canvas>
+    <input type="file" id="imageLoader" name="imageLoader" />   
+    <button onclick="grayscale()">Contrast Image</button>
+    <button onclick="threshold()">Threshold Image</button>
+    Sharpen: <input type=range id=mix min=0 max=100 value=20 onchange="update()">
+    
+
 </body>
 </html>
 <script>
@@ -36,7 +37,8 @@
     imageLoader.addEventListener('change', handleImage, false);
     var canvas = document.getElementById('imageCanvas');
     var ctx = canvas.getContext('2d');
-    
+   
+
     function handleImage(e) {
         var reader = new FileReader();
         reader.onload = function (event) {
@@ -51,8 +53,118 @@
         reader.readAsDataURL(e.target.files[0]);
     }
 
-    //Get image data
-    function contrast() {
+    //test
+    offScreen = document.createElement('canvas'),
+    offctx = offScreen.getContext('2d'),
+   
+    /// as we need pixel access to apply convolution we
+    /// need to get around CORS:
+    img.crossOrigin = 'anonymous';
+
+    /// when image is loaded step-down the downscaling
+    img.onload = resize;
+
+    /// sharpen image:
+    /// USAGE:
+    ///    sharpen(context, width, height, mixFactor)
+    ///  mixFactor: [0.0, 1.0]
+    function sharpen(ctx, w, h, mix) {
+
+        var weights = [0, -1, 0, -1, 5, -1, 0, -1, 0],
+            katet = Math.round(Math.sqrt(weights.length)),
+            half = (katet * 0.5) | 0,
+            dstData = ctx.createImageData(w, h),
+            dstBuff = dstData.data,
+            srcBuff = ctx.getImageData(0, 0, w, h).data,
+            y = h;
+
+        while (y--) {
+
+            x = w;
+
+            while (x--) {
+
+                var sy = y,
+                    sx = x,
+                    dstOff = (y * w + x) * 4,
+                    r = 0,
+                    g = 0,
+                    b = 0,
+                    a = 0;
+
+                for (var cy = 0; cy < katet; cy++) {
+                    for (var cx = 0; cx < katet; cx++) {
+
+                        var scy = sy + cy - half;
+                        var scx = sx + cx - half;
+
+                        if (scy >= 0 && scy < h && scx >= 0 && scx < w) {
+
+                            var srcOff = (scy * w + scx) * 4;
+                            var wt = weights[cy * katet + cx];
+
+                            r += srcBuff[srcOff] * wt;
+                            g += srcBuff[srcOff + 1] * wt;
+                            b += srcBuff[srcOff + 2] * wt;
+                            a += srcBuff[srcOff + 3] * wt;
+                        }
+                    }
+                }
+
+                dstBuff[dstOff] = r * mix + srcBuff[dstOff] * (1 - mix);
+                dstBuff[dstOff + 1] = g * mix + srcBuff[dstOff + 1] * (1 - mix);
+                dstBuff[dstOff + 2] = b * mix + srcBuff[dstOff + 2] * (1 - mix)
+                dstBuff[dstOff + 3] = srcBuff[dstOff + 3];
+            }
+        }
+
+        ctx.putImageData(dstData, 0, 0);
+    }
+
+    /// naive and non-efficient implementation of update, but
+    /// do illustrate the impact of sharpen after a downsample
+    function resize() {
+
+        /// set canvas size proportional to original image
+        canvas.height = canvas.width * (img.height / img.width);
+
+        /// set off-screen canvas/sharpening source to same size
+        offScreen.width = canvas.width;
+        offScreen.height = canvas.height;
+
+        /// step 1 in down-scaling
+        var oc = document.createElement('canvas'),
+            octx = oc.getContext('2d');
+
+        oc.width = img.width * 0.5;
+        oc.height = img.height * 0.5;
+        octx.drawImage(img, 0, 0, oc.width, oc.height);
+
+        /// step 2
+        octx.drawImage(oc, 0, 0, oc.width * 0.5, oc.height * 0.5);
+
+        /// draw final result to screen canvas
+        ctx.drawImage(oc, 0, 0, oc.width * 0.5, oc.height * 0.5,
+        0, 0, canvas.width, canvas.height);
+
+        /// copy to off-screen to use as source for shapening
+        offctx.drawImage(canvas, 0, 0);
+
+        /// apply sharpening convolution
+        update();
+    }
+
+    /// adjustable sharpening - update cached source
+    function update() {
+        ctx.drawImage(offScreen, 0, 0);
+        sharpen(ctx, canvas.width, canvas.height, parseInt(mix.value) * 0.01);
+    }
+
+    //test
+
+
+    //Contrast Image
+    function grayscale() {
         var imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
         var data = imageData.data;
         for (var i = 0; i < data.length; i += 4) {
@@ -70,5 +182,31 @@
 
     }
 
+    //Threshold Image
+    function threshold() {
+        var imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        var data = imageData.data;
+        var factor = (259 * (30 + 255)) / (255 * (259 - 30));
+        for (var i = 0; i < data.length; i += 4) {
+            data[i] = factor * (data[i] - 128) + 128;
+            data[i + 1] = factor * (data[i + 1] - 128) + 128;
+            data[i + 2] = factor * (data[i + 2] - 128) + 128;
+        }
 
+        // overwrite original image
+        ctx.putImageData(imageData, 0, 0);
+    }
+
+    function texture() {
+        // convert the image to a texture
+        var image = document.getElementById('imageLoader');
+        var texture = canvas.texture(image);
+
+        // apply the ink filter
+        canvas.draw(texture).ink(0.25).update();
+
+        // replace the image with the canvas
+        image.parentNode.insertBefore(canvas, image);
+        image.parentNode.removeChild(image);
+    }
 </script>
