added binarize image function.
line 213

--- a/index.html
+++ b/index.html
@@ -209,4 +209,18 @@
         image.parentNode.insertBefore(canvas, image);
         image.parentNode.removeChild(image);
     }
+    
+     //binarization of image (threshold) 
+    function imbinarize() {
+        var imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        var data = imageData.data;
+        for (var i = 0; i < data.length; i ++) {
+            if (data[i]<128) {
+                data[i]= 0 ;
+                else data[i]= 256; 
+            }
+        }
+        // overwrite original image
+        ctx.putImageData(imageData, 0, 0);
+    
 </script>
