--- a/index.html
+++ b/index.html
@@ -535,5 +535,26 @@ var paintBucketApp = (function () {
 		init: init
 	};
 }());
+	
+	// build histogram of specified image region
+function histogram(img, x1, y1, x2, y2, num_bins) {
+    if( num_bins == undefined )
+        num_bins = 256;
+    var h = img.h, w = img.w;
+    var hist = [];
+    var i, x, y, idx, val;
+    // initialize the histogram
+    for(i=0;i<num_bins;++i)
+        hist[i] = 0;
+    // loop over every single pixel
+    for(y=y1,idx=0;y<y2;++y) {
+        for(x=x1;x<x2;++x,idx+=4) {
+            // figure out which bin it is in
+            val = Math.floor((img.data[idx] / 255.0) * (num_bins-1));
+            ++hist[val];
+        }
+    }
+    return hist;
+}
                     
 </script>
